# Auto-advertisement-Solution

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: TEAM.md
.claude/agents/: nutti-developer.md  nutti-planner.md  nutti-qa.md  nutti-reporter.md  nutti-researcher.md  nutti-reviewer.md
.claude/workflows/: nutti-review.js  nutti-team.js
.github/workflows/: ci.yml
.omc/sessions/: 90609514-fb9f-4b67-8c85-8cac9ebae40d.json
.omc/state/: hud-stdin-cache.json
docs/: DEPLOY.md  cost-analysis.md
nutti/: AGENTS.md  __init__.py  cli.py  config.py  logging.py  models.py
nutti/integrations/: AGENTS.md  __init__.py  _fal_common.py  ai_text.py  image_kontext.py  publishing.py  telegram.py  video.py  (+5 more)
scripts/: _diag_el_voices.py  _diag_kling_talk.py  _diag_lipsync.py  _diag_quota.py  _diag_veo_extend.py  _diag_veo_extend_raw.py  _diag_veo_full4.py  _diag_veo_lite.py  batch_video_test.py  demo.py  get_youtube_refresh_token.py  real_kling_test.py  real_video_test.py  smoke_video_short.py  smoke_youtube_upload.py
tests/: AGENTS.md  conftest.py  test_ai_text.py  test_cost.py  test_cost_ledger.py  test_docker_config.py  test_gates_discord.py  test_image_kontext.py  test_pipeline.py  test_publishing.py  test_review_gate.py  test_settings_isolation.py  test_sheets.py  test_state_store.py  test_telegram_client.py  test_telegram_revise_video.py  test_tts_elevenlabs.py  test_tts_supertone.py  test_video.py  test_video_kling.py  test_video_lipsync.py  test_video_veo_fal.py
(+15 files in other folders)
