[project]
name = "nutti"
version = "0.1.0"
description = "Nutti — 애견 수제간식 AI 광고/콘텐츠 자동화 파이프라인"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "APScheduler>=3.10",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "gspread>=6.0",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "PyYAML>=6.0",
]

[project.scripts]
nutti = "nutti.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
